force-app/main/default/lwc/textarea/textarea.css
.navds-label {
    font-size: 1.125rem;
    font-weight: 600;
    letter-spacing: 0;
    line-height: 1.5rem;
    margin: 0;
}

.navds-form-field > :not(:first-child):not(:empty), .navds-form-field > input:not(:first-child) {
    margin-top: 8px;
}

.navds-textarea__wrapper {
    position: relative;
    width: 100%;
}

.navds-textarea__input {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    padding: 0.5rem;
    background-color: #ffffff;
    border-radius: 4px;
    border: 1px solid #6A6A6A;
    transition: height 0.1s ease-out;
    display: block;
    min-height: 48px;
    overflow-y: scroll;
    resize: vertical;
}

.navds-body-short {
    font-size: 1.125rem;
    font-weight: 400;
    letter-spacing: 0;
    line-height: 1.5rem;
    margin: 0;
}

.navds-textarea__input:disabled, .navds-textarea__input[readonly] {
    background-color: #f1f1f1;
    border-color: #a0a0a0;
    box-shadow: none;
    color: #262626;
    cursor: not-allowed;
}

.navds-textarea__input:focus {
    outline: none;
    box-shadow: 0 0 0 3px #00347D;
}

.navds-textarea__input:hover {
    border-color: #0067c5;
}

.navds-error-message {
    display: block;
    color: #BA3A26;
}

.navds-textarea--error .navds-textarea__input:not(:hover):not(:focus):not(:disabled) {
    box-shadow: 0 0 0 1px #ba3a26;
    border-color: #ba3a26;
}

.navds-textarea__input:disabled, .navds-textarea__input[readonly] {
    background-color: #f1f1f1;
    border-color: #a0a0a0;
    box-shadow: none;
    color: #262626;
    cursor: not-allowed;
}

.navds-form-field__description {
    color: #555863;
}

